<resources>
    <string name="app_name">DHIS 2 Android SDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imgdesc">imgdesc</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_splash">DHIS2 Tracker</string>
    <string name="title_activity_pin">Pin Code Lock</string>
    <string name="organisation_unit">Organisation Unit</string>
    <string name="program">Program</string>
    <string name="register">Register</string>
    <string name="enrollment">Enrollment</string>
    <string name="eventDate">Event date</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="description">ImageView description</string>
    <string-array name="titles">
        <item>Dashboard</item>
        <item>Find $</item>
        <item>Add $</item>
        <item>Visit Schedule</item>
        <item>Lost To Follow-Up</item>
        <item>Single Event Without Registration</item>
        <item>Pending Registration</item>
        <item>Log out</item>
    </string-array>
    <string-array name="boolean_values">
        <item>[Please select]</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="select_org">Select Organisation Unit</string>
    <string name="select_att">Select Attribute</string>
    <string name="select_program">Select Program</string>
    <string name="enter_keyword">Enter keyword</string>
    <string name="find">Find</string>
    <string name="warning_message">Warning</string>
    <string name="error_message">Error</string>
    <string name="information_message">Information</string>
    <string name="question_message">Question</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>
    <string name="ok_option">OK</string>
    <string name="none_option">None</string>
    <string name="cancel_option">Cancel</string>
    <string name="no_match_error">No match found</string>
    <string name="too_many_result_error">Too many search result. Please refine your search.</string>
    <string name="exit_confirmation">Do you really want to exit?</string>
    <string name="server_error">An error occurred while connecting to server. Please try again later.</string>
    <string name="add_relative_failed">An error occurred while adding relative. Please try again later.</string>
    <string name="offline_dataEntry">Network is not available. Data entered was saved locally.</string>
    <string name="offline_findInstance">Your internet connection is currently unavailable. The search result you are about to see are from your local database.</string>
    <string name="offline_item">This item has not yet been synchronized with the server.</string>
    <string name="logout_option">Log out</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="server_url">Server URL</string>
    <string name="select_server_url">Select server URL</string>
    <string name="custom_server_url">Enter custom server URL</string>
    <string name="custom_url">Custom URL</string>
    <string name="login">Log in</string>
    <string name="loging_in">Logging In</string>
    <string name="syncing">Synchronizing</string>
    <string name="syncing_failed">Sync failed. Going Offline Mode.</string>
    <string name="offline_mode">No internet connection. Going offline mode.</string>
    <string name="please_wait">Please wait</string>
    <string name="login_fail">Login fail</string>
    <string name="invalid_username_or_password">Unable to log in due to an invalid username or password.</string>
    <string name="unable_to_login">Unable to log in.</string>
    <string name="progress_getting_current_user">Getting Current User</string>
    <string name="progress_getting_users">Getting Users</string>
    <string name="progress_getting_tracked_entity_attributes">Getting Tracked Entity Attributes</string>
    <string name="progress_getting_relationship_types">Getting Relationship Types</string>
    <string name="progress_getting_option_sets">Getting Option Sets</string>
    <string name="progress_getting_program_details">Getting Program Details</string>
    <string name="progress_getting_program_stages">Getting Program Stages</string>
    <string name="progress_getting_assigned_programs">Getting Assigned Programs</string>
    <string name="progress_getting_organisation_units">Getting Organisation Units</string>
    <string name="initial_pin">Please choose a secret PIN code with 4 digits. The next time you start the application, use this PIN to login.</string>
    <string name="please_enter_pin">Please enter 4 digits PIN code</string>
    <string name="enter_pin">Enter PIN code</string>
    <string name="pin_4_digits">PIN code must be 4 digits</string>
    <string name="incorrect_pin">Incorrect PIN code</string>
    <string name="profile">Profile</string>
    <string name="programs">Programs</string>
    <string name="searching">Searching</string>
    <string name="title_activity_add_instance">AddInstanceActivity</string>
    <string name="add_relative">Add relative</string>
    <string name="addrepeatablestage">Add repeatable stage</string>
    <string name="other">Other</string>
    <string name="move_tracked_entity_instance">Transfer</string>
    <string name="programstages">Program Stages</string>
    <string name="relationships">Relationships</string>
    <string name="notes">Notes</string>
    <string name="relatives">Relatives</string>
    <string name="add">Add</string>
    <string name="adding_relative">Adding Relative</string>
    <string name="searching_relative">Searching Relative</string>
    <string name="back">Back</string>
    <string name="relationship_type">Relationship type</string>
    <string name="tracked_entity">Tracked entity</string>
    <string name="search_available_tei">Search Available TEI</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results: (Click to Add)</string>
    <string name="cannot_add_relationship_self">Cannot add relationship to itself.</string>
	<string name="adding_and_enrolling">Adding and Enrolling</string>
	<string name="adding_and_enrolling_success">Tracked entity instance successfully added and enrolled.</string>
	<string name="adding_and_enrolling_failed">Adding tracked entity instance failed.</string>
	<string name="please_select">[Please select]</string>
    <string name="saving">Saving</string>
    <string name="enrolling">Enrolling</string>
    <string name="save_successful">Save Successful</string>
    <string name="save_failed">Save Failed</string>
    <string name="mandatory_star">*</string>
    <string name="mandatory_error">Please fill in or select value for all mandatory fields.</string>
    <string name="save">Save</string>
    <string name="save_new">Save and Add New</string>
    <string name="network_not_available">Network not available.</string>
    <string name="submit">Submit</string>
    <string name="enroll">Enroll</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="loading">Loading</string>
    <string name="registerAll">Register All</string>
    <string name="dataValuesUploaded">Data Values Uploaded</string>
    <string name="savedToRecordStore">Network is not available. TEI was saved to pending list!</string>
    <string name="noResult">There is no result corresponding with your search criteria. Please try other keywords! </string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="gps_failed">Failed getting GPS location. Try again.</string>
    <string name="gps_success">Success getting GPS location.</string>
    <string name="loading_metadata">Loading meta data</string>
    <string name="loading_tracked_entity_instance">Loading Tracked Entity Instance</string>
    <string name="loading_enrollments">Loading Enrollments</string>
    <string name="loading_events">Loading Events</string>
    <string name="saving_local_enrollments">Storing Enrollments on Device</string>
    <string name="saving_local_events">Storing Events on Device</string>
    <string name="push_local_data">Push local data</string>
    <string name="pull_metadata_from_server">Update metadata from server</string>
    <string name="loading_patient_data">Loading Patient Data. This may take several minutes depending on the number of patients.</string>
    <string name="pull_patient_data_from_server">Update patient data from server</string>
    <string name="confirm_push_local_data">Pushing local data can take some time depending on the amount of data and your internet connection. Please make sure you have finished your current task and that you have a stable connection to the internet. Are you sure you want to push local data?</string>
    <string name="confirm_patient_data_pull">Patient data has already been downloaded. Do you want to download it again in case of changes in the server database?</string>
    <string name="confirm_metadata_pull">Metadata has already been downloaded and rarely changes. If you think the system administrators of DHIS 2 have changed the structure of Programs, added Health Facilities or made other similar modifications, then you should update. Do you still want to update?</string>
    <string name="select_offline_orgunits">Which Organization Units would you like to have available offline?</string>
    <string name="adding_program">Adding program</string>
    <string name="adding_orgunit">Adding Organization Unit</string>
    <string name="adding_option_set">Adding Option Set</string>
    <string name="adding_option">Adding Option</string>
    <string name="saving_data_locally">Saving data locally</string>
    <string name="retry">Retry</string>
    <string name="uploading_tracked_entity_instances">Uploading Tracked Entity Instances</string>
    <string name="uploading_program_enrollments">Uploading Program Enrollments</string>
    <string name="uploading_program_stage_instances">Uploading Program Stage Instances</string>
    <string name="uploading_data_values">Uploading Program Stage Data Values</string>
    <string name="uploading_relationships">Uploading Relationships</string>
    <string name="uploading_transfers">Uploading Transfers</string>
    <string name="refreshing_updated_data_from_server">Refreshing updated data from server</string>
    <string name="summary">Summary</string>
    <string name="uploading_error">An error has occurred while uploading. Your data has been saved, and you can try uploading again later. Press OK to see upload summary.</string>
    <string name="loading_error_metadata">An error occurred while loading metadata. Please make sure you have are connected to the internet and resume downloading.</string>
    <string name="loading_failed_metadata">Loading of Meta Data failed. Meta Data is required for using the application, so please make sure you are connected to the internet and retry.</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="retrying">Retrying</string>
    <string name="resume">Resume</string>
    <string name="failed_items">Failed Items</string>
    <string name="destination_orgunit">Destination Organization Unit</string>
    <string name="current_orgunit">Current Organization Unit</string>
    <string name="transfering_tracked_entity_instance">Transferring Tracked Entity Instance</string>
    <string name="confirm_transfer">Confirm Transfer</string>
</resources>